# Django_net

./: .gitattributes  pyproject.toml
django_net_core/: manage.py
django_net_core/applications/abstract_activities/: apps.py  models.py
django_net_core/applications/abstract_activities/services/: utils.py
django_net_core/applications/api/: serializers.py
django_net_core/applications/frontend/: api_urls.py  permissions.py  urls.py  views.py
django_net_core/applications/frontend/services/: pagination.py  utils.py
django_net_core/applications/groups/: admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  views.py
django_net_core/applications/groups/migrations/: 0001_initial.py  0002_initial.py  0004_grouppost_user_list.py  (+2 more)
django_net_core/applications/logging/: logging_formatters.py
django_net_core/applications/user_profiles/: admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
django_net_core/applications/user_wall/: admin.py  apps.py  forms.py  models.py
django_net_core/django_net_core/: asgi.py  settings.py  urls.py  wsgi.py  yasg.py
django_net_core/static/css/: base.css  pagination.css
django_net_core/static/js/: base.js
django_net_core/templates/: base.html
django_net_core/templates/account/: base.html  login.html  logout.html  signup.html
django_net_core/templates/groups/: create_group.html  create_post.html  group.html
django_net_core/templates/include/: footer.html  header.html  pagination.html
django_net_core/templates/search/: group_search.html  people_search.html  posts_search.html
django_net_core/templates/user_wall/: create_post.html  edit_post.html  wall.html
django_net_core/tests/: conftest.py  test_group_services.py
(+83 files in other folders)
